--- a/css/portfolio-styles.css
+++ b/css/portfolio-styles.css
@@ -79,135 +79,25 @@ ul.main-header-ctas li a {
     letter-spacing: 0.32px;
 }
 
-a.state:hover, a.state:focus{
+a.state:hover,
+a.state:focus {
     color: var(--TOMATO);
-    > .web-header {
+
+    >.web-header {
         color: var(--TOMATO);
     }
 
-    > .web-footer {
+    >.web-footer {
         color: var(--TOMATO);
     }
+
 }
 
 
-
-
-/* main css------------------------------------------ */
-/* section studio  */
-.order-studio {
-    background-color: var(--NAVY-BLUE);
-}
-
-.order-studio h1 {
-    color: var(--WHITE);
-    text-align: center;
-    font-size: 56px;
-    font-style: normal;
-    font-weight: 700;
-    line-height: 1.071;
-    /* multiplier */
-    letter-spacing: 1.12px;
-}
-
-.order-studio .main-button {
-    cursor: pointer;
-    border-radius: 4px;
-    background: var(--IRIS);
-    /* box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.15); */
-    color: var(--WHITE);
-    font-family: inherit;
-    font-size: 16px;
-    font-style: normal;
-    font-weight: 500;
-    line-height: 1.5;
-    /* multiplier */
-    letter-spacing: 0.64px
-}
-
-button.state:hover, button.state:focus{
+button.state:hover,
+button.state:focus {
     background: var(--TOMATO);
 }
-
-/* section benefits  */
-ul.benefits-menu {
-    list-style-type: none;
-    padding: 0;
-}
-
-.benefits ul li h3 {
-    color: var(--NAVY-BLUE);
-    font-size: 20px;
-    font-style: normal;
-    font-weight: 500;
-    line-height: 1.20;
-    /* multiplier */
-    letter-spacing: 0.4px;
-}
-
-.benefits ul li p {
-    color: var(--SLATE);
-    font-size: 16px;
-    font-style: normal;
-    font-weight: 400;
-    line-height: 1.5;
-    /* multiplier% */
-    letter-spacing: 0.32px;
-}
-
-/* section what we do  */
-.what-we-do h2 {
-    text-align: center;
-    font-size: 36px;
-    font-style: normal;
-    font-weight: 700;
-    line-height: 1.11;
-    /* multiplier */
-    letter-spacing: 0.72px;
-    text-transform: capitalize;
-}
-
-.what-we-do ul {
-    list-style-type: none;
-    padding: 0;
-}
-
-/* section our team  */
-.our-team h2 {
-    text-align: center;
-    font-size: 36px;
-    font-style: normal;
-    font-weight: 700;
-    line-height: 1.11;
-    /* multiplier */
-    letter-spacing: 0.72px;
-    text-transform: capitalize;
-}
-
-.our-team ul {
-    list-style-type: none;
-    padding: 0;
-}
-
-.our-team ul li h3 {
-    font-size: 20px;
-    font-style: normal;
-    font-weight: 500;
-    line-height: 1.20;
-    /* 120% */
-    letter-spacing: 0.4px;
-}
-
-.our-team ul li p {
-    color: var(--SLATE);
-    font-size: 16px;
-    font-style: normal;
-    font-weight: 400;
-    line-height: 1.50;
-    /* 150% */
-    letter-spacing: 0.32px;
-}
-
 
 
 /* footer css----------------------------------------- */
